<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_log_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="support.esri.com.fuse.LogInActivity"
    tools:showIn="@layout/activity_log_in">

    <Button
        android:id="@+id/closer"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="?android:attr/colorBackground"
        android:text="@string/skip"
        android:textSize="24sp"
        android:theme="@style/Theme.AppTheme.NoActionBar" />

    <LinearLayout
        android:id="@+id/arcgis_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/closer"
        android:layout_marginTop="120dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/auth_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/button"
                android:layout_weight="1"
                android:hint="@string/arcgis_com_username"
                android:inputType="text"
                android:textAlignment="center" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/auth_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/editText2"
                android:layout_weight="1"
                android:hint="@string/arcgis_com_password"
                android:inputType="textPassword"
                android:textAlignment="center" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/sign_in" />

        <CheckBox
            android:id="@+id/remember_me_auth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remember_me" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/social_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/arcgis_layout"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.twitter.sdk.android.core.identity.TwitterLoginButton
            android:id="@+id/twitter_login_button"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:fontFamily="serif"
            android:textAllCaps="false"
            android:textSize="12sp" />


    </LinearLayout>
</RelativeLayout>
